Gateway filter 생성 및 적용, 우선순위 지정 및 yml 설정값 불러오기

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -6,16 +6,32 @@ spring:
     name: gateway-service
   cloud:
     gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: hello gateway!
+            preLogger: false
+            postLogger: true
       routes:
         - id: first-service
           uri: lb://FIRST-SERVICE
           predicates:
             - Path=/first-service/**
+          filters:
+            - CustomFilter
 
         - id: second-service
           uri: lb://SECOND-SERVICE
           predicates:
             - Path=/second-service/**
+          filters:
+            - name: CustomFilter
+            - name: LoggerFilter
+              args:
+                baseMessage: hello gateway!
+                preLogger: false
+                postLogger: true
+
 
 
 
