--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -22,6 +22,15 @@ spring:
       max-file-size: 10MB
 
   # aws s3 ?? ??? ??? ??? ???? ??
+  cloud:
+    aws:
+      credentials:
+        accessKey: aws ???
+        secretKey: aws ???
+      region:
+        static: ap-northeast-2
+      s3:
+        bucket: orderservice-prod-img8917
 
 
 # log level setting
