ordering-service에서 RestTemplate으로 타 서버에 요청 보내기, 에러 발생 확인 후 문제 수정

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -43,6 +43,15 @@ spring:
             - RewritePath=/product-service/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
 
+        - id: ordering-service
+          uri: lb://ORDERING-SERVICE
+          predicates:
+            - Path=/ordering-service/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/ordering-service/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
+
         - id: first-service
           uri: lb://FIRST-SERVICE
           predicates:
