config service 프로젝트 추가, local git 저장소에서 공통 설정 읽어오기, actuator/refresh를 통해 서버 재시작 없이 변경값 적용하기(진행 중)

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -46,6 +46,13 @@ logging:
         productservice:
           common: debug
 
+# ????? ?? (beans: ??? ????? ??? ? ???, health: ?? ????? ???)
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, refresh, beans
+
 
 
 
