--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -1,26 +1,3 @@
-server:
-  port: 8888
-
 spring:
-  application:
-    name: config-service
-  cloud:
-    config:
-      server:
-        git:
-          uri: file:///Users/stephen/Desktop/playdata_8th_develop/git-local-repo
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health, refresh, beans
-
-
-
-
-
-
-
-
-
+  profiles:
+    active: dev
