--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -2,6 +2,8 @@
 # 서비스가 실행될 때 application.yml보다 우선순위가 높은 설정파일과 읽을 설정 파일 등록
 # 읽어오고자 하는 config 서버의 위치 등록
 spring:
+  application:
+    name: product-service # 서비스 이름과 매칭되는 설정 파일을 지정 (product-service.yml)
   cloud:
     config:
       uri: http://localhost:8888
