첫 jenkinsfile 생성. Stage 작성 후 동작 여부 확인 - 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 version: '3.8'
 services:
   config-service:
-    build: ./config-service
+    image: wlsgh/config-service:1.0
     container_name: config-service
     networks:
       - msa-network
@@ -18,7 +18,7 @@ services:
     restart: always # 컨테이너가 모종의 이유로 중지되면 무조건 재시작 시도.
 
   discovery-service:
-    build: ./discovery-service
+    image: wlsgh/discovery-service:1.0
     container_name: discovery-service
     networks:
       - msa-network
@@ -33,7 +33,7 @@ services:
     restart: always # 컨테이너가 모종의 이유로 중지되면 무조건 재시작 시도.
 
   gateway-service:
-    build: ./gateway-service
+    image: wlsgh/gateway-service:1.0
     container_name: gateway-service
     networks:
       - msa-network
@@ -48,7 +48,7 @@ services:
     restart: always
 
   user-service:
-    build: ./user-service
+    image: wlsgh/user-service:1.0
     container_name: user-service
     networks:
       - msa-network
@@ -61,7 +61,7 @@ services:
     restart: always
 
   order-service:
-    build: ./ordering-service
+    image: wlsgh/order-service:1.0
     container_name: order-service
     networks:
       - msa-network
@@ -74,7 +74,7 @@ services:
     restart: always
 
   product-service:
-    build: ./product-service
+    image: wlsgh/product-service:1.0
     container_name: product-service
     networks:
       - msa-network
