.env (환경변수) 파일에서 민감정보 로드 후 스프링 어플리케이션 실행하기 - 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 # Docker Compose 파일 포맷의 버전을 지정합니다.
 version: '3.8'
 services:
@@ -9,6 +8,13 @@ services:
       - msa-network
     ports:
       - "8888:8888"
+    environment:
+      # 환경변수명 = ${.env에 있는 변수명}
+      - GITHUB_URL=${GITHUB_URL}
+      - USERNAME=${GITHUB_USERNAME}
+      - TOKEN=${GITHUB_TOKEN}
+    env_file:
+      - .env # .env 파일에서 환경변수 로드
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://config-service:8888/actuator/health" ]
       interval: 15s # 15초마다 한번씩 체크
