--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -2,5 +2,19 @@
 
 spring:
   profiles:
-    active: dev
+    name: config-service
+  cloud:
+    config:
+      server:
+        git:
+          uri: ${GITHUB_URL}
+          default-label: main
+          username: ${USERNAME}
+          password: ${TOKEN}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, refresh, beans
 
