.env (환경변수) 파일에서 민감정보 로드 후 스프링 어플리케이션 실행하기 - 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
         condition: service_healthy
     restart: always
 
-  order-service:
+  ordering-service:
     image: 597088024931.dkr.ecr.ap-northeast-2.amazonaws.com/order-service:latest
     container_name: order-service
     networks:
