--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,21 +97,8 @@ services:
       - "6379:6379"
     networks:
       - msa-network
-
-  mysql-db:
-    image: mysql:8
-    ports:
-      - "3316:3306"
-    networks:
-      - msa-network
-    environment:
-      MYSQL_ROOT_PASSWORD: mysql
-      MYSQL_DATABASE: orderservice
-    volumes:
-      - db-data:/var/lib/mysql
-
-# 서비스들이 연결될 Docker 네트워크를 정의할 수 있습니다.
-# 동일한 호스트 내에서 서로 통신할 수 있도록 해 주는 Docker의 네트워크 드라이버.
+      - # 서비스들이 연결될 Docker 네트워크를 정의할 수 있습니다.
+      # 동일한 호스트 내에서 서로 통신할 수 있도록 해 주는 Docker의 네트워크 드라이버.
 networks:
   msa-network:
     driver: bridge
