--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
         condition: service_healthy
     restart: always
 
-  ordering-service:
+  order-service:
     image: 597088024931.dkr.ecr.ap-northeast-2.amazonaws.com/order-service:latest
     container_name: order-service
     networks:
@@ -96,8 +96,7 @@ services:
     ports:
       - "6379:6379"
     networks:
-      - msa-network
-      - # 서비스들이 연결될 Docker 네트워크를 정의할 수 있습니다.
+      - msa-network # 서비스들이 연결될 Docker 네트워크를 정의할 수 있습니다.
       # 동일한 호스트 내에서 서로 통신할 수 있도록 해 주는 Docker의 네트워크 드라이버.
 networks:
   msa-network:
