도커 컴포즈 파일 변경(필요없는) - 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,3 +105,4 @@ networks:
 volumes:
   db-data: # mysql 컨테이너가 사용하는 db-data 볼륨을 docker-compose도 기억해 줌.
 
+# version: '3.8' → version: '3.8' # trigger build
