오더 서비스 파일 이름 변경 - 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,9 +66,9 @@ services:
         condition: service_healthy
     restart: always
 
-  order-service:
-    image: 597088024931.dkr.ecr.ap-northeast-2.amazonaws.com/order-service:latest
-    container_name: order-service
+  ordering-service:
+    image: 597088024931.dkr.ecr.ap-northeast-2.amazonaws.com/ordering-service:latest
+    container_name: ordering-service
     networks:
       - msa-network
     depends_on:
