--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,10 +1,23 @@
-# 서비스 변경 감지용 주석
 server:
   port: 0
 
 spring:
   application:
     name: user-service
+
+  mail:
+    host: smtp.gmail.com # SMTP 서버 호스트
+    port: 587 # SMTP 서버 포트
+    username: wlsgh147258
+    password: ltumsucidvivmeng # 앱 비밀번호 16자리 (공백없이)
+    properties:
+      mail:
+        smtp:
+          auth: true # 사용자 인증 시도 여부 (앱 비밀번호로 인증)
+          timeout: 5000
+          starttls:
+            enable: true
+
 
 
 
