--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -53,6 +53,11 @@ dependencies {
 	// S3 파일 연동
 	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
 
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// 자바 언어를 통해 smtp 통신을 할 수 있게 하는 라이브러리
+	implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
+
 }
 
 dependencyManagement {
