오더 서비스 파일 이름 변경 - 5

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 server:
   port: 0
 
@@ -8,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com # SMTP 서버 호스트
     port: 587 # SMTP 서버 포트
-    username: wlsgh147258
-    password: ltumsucidvivmeng # 앱 비밀번호 16자리 (공백없이)
+    username: stephen4951
+    password: vdivgvvfcmkoudgk # 앱 비밀번호 16자리 (공백없이)
     properties:
       mail:
         smtp:
